--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/inter/font.css' %}">
     <link rel="stylesheet" href="{% static 'fonts/fontello/fontello/fontello.css' %}">
     <link rel="stylesheet" href="{% static 'fonts/essential/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'client_side_image_cropping/croppie.css' %}">
