--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,8 +7,8 @@
     * {
         padding: 0;
         margin: 0;
-        font-family: Roboto, 'Segoe UI', sans-serif;
         box-sizing: border-box;
+        font-family: Inter;
     }
 
     ::-webkit-scrollbar {
@@ -1371,7 +1371,7 @@
     #main-left #msg-section .msg-out {
         flex-direction: row-reverse;
         margin-left: auto;
-        color: #ff;
+        color: #fff;
     }
 
     #main-left .msg-out .name {
@@ -1651,6 +1651,7 @@
     /* ADD MEMBER SECTION */
     #main-right #add-members {
         height: 90vh;
+        overflow-y: scroll;
     }
 
     #main-right #add-members form {
